--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <h1>Quiz</h1> 
     <!-- <i class="fa-solid fa-house"></i> -->
+     <div id="question"></div>
     <input type="text" id="text-container"></input>
     <div id="timer">Time left: 60s</div>
     <div id="final-score"></div>
